--- a/canciones.html
+++ b/canciones.html
@@ -8,12 +8,13 @@
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
     <title>Canciones</title>
 </head>
+
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,17 +26,17 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
-                            <section class="icperfil">
+                        <article class="perfil-menu">
+                            <article class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                            </section>
+                            </article>
                              </div>
-                </section>
+                <article>
         </nav>
-        </article>
+        </section>
     </header>
     <main>
-        <div class="container">
+        <section class="container">
 
             <h2 class="titulos">Canciones</h2>
             
@@ -77,6 +78,7 @@
                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
                 </li>
             </ul> 
+            </section>
     </main>
     <footer>
         <section class="footer">
