--- a/detail-artist.html
+++ b/detail-artist.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,15 +25,16 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
-                            <section class="icperfil">
+                        <article class="perfil-menu">
+                            <article class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                            </section>
-                             </div>
-                </section>
+                            </article>
+                        </article>
+                        </article>
         </nav>
-        </article>
+        </section>
     </header>
+
     <main>
         <section class="detalleartista">
                 <h1> <a href="https://www.instagram.com/justinbieber/" class="instagramj">Justin Bieber</a></h1>
@@ -51,7 +52,7 @@
                                 
                  Debido a la inmensa cantidad de discos vendidos durante su trayectoria profesional, Justin Bieber se ha convertido en uno de los artistas musicales con más ventas de la historia.</p>
                  <iframe  class= "videoj" width="560" height="315" src="https://www.youtube.com/embed/sBjNRLiLO5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </section>
+        </section>
          
     </main>
     <footer>
