--- a/detail-track.html
+++ b/detail-track.html
@@ -10,10 +10,10 @@
 </head>
 <body>
         <header>
-                <article class="cajainicio">
+                <section class="cajainicio">
                     <nav class="header-items">
-                        <section class="BarraDeBusqueda">
-                                <div class="menu">
+                        <article class="BarraDeBusqueda">
+                                <article class="menu">
                                     <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,22 +25,23 @@
                                     <input id= "ba" type="text" name="search" placeholder = "Search">
                                     <button type="submit" class="button"> Buscar</button>
                                 </form>
-                                <div class="perfil-menu">
-                                    <section class="icperfil">
+                                <article class="perfil-menu">
+                                    <article class="icperfil">
                                         <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                                    </section>
-                                     </div>
-                        </section>
+                                    </article>
+                                </article>
+                                </article>
                 </nav>
-                </article>
-            </header>
+                </section>
+         </header>
+
     <main>
-      <article class="detallestrack">
+      <section class="detallestrack">
               <h3 class="names">Peaches</h3> 
               <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
                 <li class="names">Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
-                <li>Álbum:<a href="./detail-album.html" class="names">Justice</a></li> 
+                <li>Álbum:<a href="./detail-album.html" class="instajustin">Justice</a></li> 
                 <li>Artista invitado: Daniel Caesar, Giveon</li>
                 <li>Fecha de lanzamiento: 2021</li>
                 <li>
@@ -51,8 +52,9 @@
                 </li>
         </ul>
         
-      </article>
+      </section>
     </main>
+    
     <footer>
         <section class="footer">
             <article class="seguinos">
