--- a/perfil.html
+++ b/perfil.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,17 +25,18 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
-                            <section class="icperfil">
+                        <article class="perfil-menu">
+                            <article class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                            </section>
-                             </div>
-                </section>
+                            </article>
+                        </article>
+                        </article>
         </nav>
-        </article>
+        </section>
     </header>
+
     <main class="formulario">
-        <div class="slider">
+        <article class="slider">
             <h3 class= "names">¡Bienvenido a tu perfil de Sound-Now!</h3>
             <ul>
                     <li><img src="img/auriculares.jpg" alt=""></li>
@@ -43,21 +44,22 @@
                     <li><img src="img/parlante.jpg" alt=""></li>
                     <li><img src="img/colores.jpg" alt=""></li>
             </ul>   
-            </div>
+        </article>
         <form action="" method="GET"> 
-            <div>
+            <article>
                     <input type="text" name="user" placeholder="Nombre de Usuario" class="nombreu">
-            </div>
-            <div>
+            </article>
+            <article>
                 <input type="mail" name="mail" placeholder="Correo electrónico" class="mail">
-            </div>
-            <div>
+            </article>
+            <article>
                 <input type="contraseña" name="ontraseña" placeholder="Contraseña" class="contrasena">
-            </div>
+            </article>
             <button class="iniciars" type="submit" id="boton">Inicia Sesión</button>
             </form> 
            <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
+    
     <footer>
         <section class="footer">
             <article class="seguinos">
