--- a/playlists.html
+++ b/playlists.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,24 +25,25 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
+                        <article class="perfil-menu">
                             <section class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </section>
-                             </div>
-                </section>
+                        </article>
+                </article>
         </nav>
-        </article>
+        </section>
+
     </header>
     <section class="playlist">
         <h1 class="titulos">Mi Playlist</a></h1>
         <main>
-            <section class="containerpl">
+            <article class="containerpl">
                 <article class="cajapl">
-                    <section class="fotopl">
+                    <article class="fotopl">
                         <a href="./detail-track.html"><img class="fotop" src="./img/peaches.jpeg" alt=""></a>
-                    </section>
-                    <section class="infopl">
+                    </article>
+                    <article class="infopl">
                         <h2> <a href="./detail-track.html">Peaches</a> <a href="./playlists.html"></a></h2>
                         <h4><a href="./detail-artist.html"> Justin Bieber </a></h4>
                         <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
@@ -52,13 +53,13 @@
                                     <audio src="musica/ musik.mp3" autoplay loop></audio>
                             </li>
                          </ul>
-                    </section>
+                    </article>
                 </article>
                 <article class="cajapl">
-                    <section class="fotopl">
+                    <article class="fotopl">
                         <a href="./detail-track.html"><img class="fotop" src="./img/Alohamaluma.jpeg" alt=""></a>
-                    </section>
-                   <section class="infopl">
+                    </article>
+                   <article class="infopl">
                     <h2> <a href="./detail-track.html">Aloha</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Maluma </a></h4>
                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
@@ -68,13 +69,13 @@
                                  <audio src="musica/ musik.mp3" autoplay loop></audio>
                          </li>
                       </ul>
-                   </section>
+                   </article>
                 </article>
                 <article class="cajapl">
-                    <section class="fotopl">
+                    <article class="fotopl">
                         <a href="./detail-track.html"><img class="fotop" src="./img/Eye-of-the-Tiger.jpeg" alt=""></a>
-                    </section>
-                   <section class="infopl">
+                    </article>
+                   <article class="infopl">
                     <h2> <a href="./detail-track.html">Eye Of The Tiger</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Survior </a></h4>
                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
@@ -84,13 +85,13 @@
                                  <audio src="musica/ musik.mp3" autoplay loop></audio>
                          </li>
                       </ul>
-                   </section>
+                   </article>
                 </article>
                 <article class="cajapl">
-                    <section class="fotopl">
+                    <article class="fotopl">
                         <a href="./detail-track.html"><img class="fotop" src="./img/bobmarleynowoman.jpg" alt=""></a>
-                    </section>
-                   <section class="infopl">
+                    </article>
+                   <article class="infopl">
                     <h2> <a href="./detail-track.html"> No Woman No Cry</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Bob Marley </a></h4>
                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
@@ -100,13 +101,13 @@
                                  <audio src="musica/ musik.mp3" autoplay loop></audio>
                          </li>
                       </ul>
-                   </section>
+                   </article>
                 </article>
                 <article class="cajapl">
-                    <section class="fotopl">
+                    <article class="fotopl">
                         <a href="./detail-track.html"><img class="fotop" src="./img/terminales.jpg" alt=""></a>
-                    </section>
-                   <section class="infopl">
+                    </article>
+                   <article class="infopl">
                      <h2> <a href="./detail-track.html">Terminales</a> <a href="./playlists.html"></a></h2>
                      <h4><a href="./detail-artist.html"> Cruzando el Charco </a></h4>
                      <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
@@ -116,10 +117,9 @@
                                  <audio src="musica/ musik.mp3" autoplay loop></audio>
                          </li>
                       </ul>
-                   </section>
+                   </article>
                 </article>
-            </section>
-            
+            </article> 
         </section>
 </main>
 
