--- a/search-results.html
+++ b/search-results.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,17 +25,18 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
+                        <article class="perfil-menu">
                             <section class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </section>
-                             </div>
-                </section>
+                        </article>
+                        </article>
         </nav>
-        </article>
+        </section>
     </header>
+
     <main>
-        <article>
+        <section>
             <h2 class= "titulos">Resultados de tu búsqueda:</h2>
             <ul class="detailx">
                 <li class="detail"> <a href="./detail-track.html"><img class="fotosd" src="./img/peaches.jpeg" alt=""> <p class="namesx">Peaches</p></a></p></a></li>
@@ -44,8 +45,9 @@
                 <li class="detail"> <a href="./detail-artist.html"><img class="fotosd" src="./img/ricky2.jpg" alt=""> <p class="namesx">Ricky Martin</p></a></li>
                 <li class="detail"> <a href="./detail-album.html"><img class="fotosd" src="./img/x.jpg" alt=""> <p class="namesx"> X (Deluxe)</p></a></li>
             </ul>
-        </article>
+        </section>
     </main>
+    
     <footer>
         <section class="footer">
             <article class="seguinos">
