--- a/albumes.html
+++ b/albumes.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,14 +25,14 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
+                        <article class="perfil-menu">
                             <section class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </section>
-                             </div>
-                </section>
+                        </article>
+                        </article>
         </nav>
-        </article>
+        </section>
     </header>
     <main>
             <section class="acaja">
@@ -63,83 +63,84 @@
                                 <li>I See Fire</li>
                         </ol>      
                         </article>
+                    <article class="album">
+                        <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
+                        <h2 class="texto"><a href="./detail-album.html" class="names">Evolve</a>by<a href="./detail-artist.html" class="names">Imagine Dragons</a></h2>
+                        <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
+                        <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
+                        <p>Canciones del Album: </p>
+                        <ol class="listadetallealbum">
+                                <li>I Don't Know Why</li>
+                                <li>Whatever It Takes</li>
+                                <li>Believer</li>
+                                <li>Walking the Wire</li>
+                                <li>Rise Up</li>
+                                <li>I'll Make It Up to You</li>
+                                <li>Yesterday</li>
+                                <li>Mouth of the River</li>
+                                <li>Thunder</li>
+                                <li>Start Over</li>
+                                <li>Dancing in the Dark</li>
+                        </ol>   
+                    </article>
+
                 <article class="album">
-                    <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
-                    <h2 class="texto"><a href="./detail-album.html" class="names">Evolve</a>by<a href="./detail-artist.html" class="names">Imagine Dragons</a></h2>
-                    <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
-                    <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
+                    <a href="./detail-album.html"><img class="fotos" src="./img/justin-bieber-justice.jpeg" alt=""></a>
+                    <h2 class="texto"><a href="./detail-album.html" class="names">Justice</a>by<a href="./detail-artist.html" class="names">Justin Bieber</a></h2>
+                    <p class="texto"> Lanzamiento: 19 de marzo, 2021</p>
+                    <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
+                    <p>Canciones del Album: </p>
+                     <ol class="listadetallealbum">
+                            <li>Much</li>
+                            <li>Deserve You</li>
+                            <li>As I Am</li>
+                            <li>Off My Face</li>
+                            <li>Holy</li>
+                            <li>Unstable</li>
+                            <li>MKL Interlude</li>
+                            <li>Die For You</li>
+                            <li>Hold On</li>
+                            <li>Somebody</li>
+                            <li>Ghost</li>
+                            <li>Peaches</li>
+                            <li>Love You Different</li>
+                            <li>Loved By You</li>
+                            <li>Anyone</li>
+                            <li>Loneley</li>
+                    </ol>      
+                </article>
+
+                <article class="album">
+                    <a href="./detail-album.html"><img class="fotos" src="./img/tini.jpg" alt=""></a>
+                    <h2 class="texto"><a href="./detail-album.html" class="names">TINI TINI TINI</a>by<a href="./detail-artist.html" class="names">Tini</a></h2>
+                    <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
+                    <p class="texto">Generos: Pop, reguetón, balada, trap</p>
+                    <p>Canciones del Album: </p>
+                     <ol class="listadetallealbum">
+                        <li>Un beso en Madrid</li>
+                        <li>Fresa</li>
+                        <li>Si tú supieras</li>
+                        <li>Tuyo</li>
+                        <li>Te olvidaré</li>
+                        <li>Acércate</li>
+                        <li>Playa</li>
+                        <li>Ella Dice</li>
+                        <li>Duele</li>
+                        <li>Recuerdo</li>
+                        <li>Oye</li>
+                        <li>Diciembre</li>
+                        <li>Sueltate el pelo</li>
+                        <li>22</li>
+                    </ol>      
+                </article>
+
+               <article class="album">
+                    <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
+                    <h2 class="texto"><a href="./detail-album.html" class="names">Heathens</a>by<a href="./detail-artist.html" class="names">Twenty One Pilots</a></h2>
+                    <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
+                    <p class="texto">Generos: Rap rock</p>
                     <p>Canciones del Album: </p>
                     <ol class="listadetallealbum">
-                            <li>I Don't Know Why</li>
-                            <li>Whatever It Takes</li>
-                            <li>Believer</li>
-                            <li>Walking the Wire</li>
-                            <li>Rise Up</li>
-                            <li>I'll Make It Up to You</li>
-                            <li>Yesterday</li>
-                            <li>Mouth of the River</li>
-                            <li>Thunder</li>
-                            <li>Start Over</li>
-                            <li>Dancing in the Dark</li>
-                    </ol>   
-
-                </article>
-                <article class="album">
-                <a href="./detail-album.html"><img class="fotos" src="./img/justin-bieber-justice.jpeg" alt=""></a>
-                <h2 class="texto"><a href="./detail-album.html" class="names">Justice</a>by<a href="./detail-artist.html" class="names">Justin Bieber</a></h2>
-                <p class="texto"> Lanzamiento: 19 de marzo, 2021</p>
-                <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
-                <p>Canciones del Album: </p>
-                 <ol class="listadetallealbum">
-                        <li>Much</li>
-                        <li>Deserve You</li>
-                        <li>As I Am</li>
-                        <li>Off My Face</li>
-                        <li>Holy</li>
-                        <li>Unstable</li>
-                        <li>MKL Interlude</li>
-                        <li>Die For You</li>
-                        <li>Hold On</li>
-                        <li>Somebody</li>
-                        <li>Ghost</li>
-                        <li>Peaches</li>
-                        <li>Love You Different</li>
-                        <li>Loved By You</li>
-                        <li>Anyone</li>
-                        <li>Loneley</li>
-                </ol>      
-                </article>
-
-                <article class="album">
-                <a href="./detail-album.html"><img class="fotos" src="./img/tini.jpg" alt=""></a>
-                <h2 class="texto"><a href="./detail-album.html" class="names">TINI TINI TINI</a>by<a href="./detail-artist.html" class="names">Tini</a></h2>
-                <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
-                <p class="texto">Generos: Pop, reguetón, balada, trap</p>
-                <p>Canciones del Album: </p>
-                 <ol class="listadetallealbum">
-                    <li>Un beso en Madrid</li>
-                    <li>Fresa</li>
-                    <li>Si tú supieras</li>
-                    <li>Tuyo</li>
-                    <li>Te olvidaré</li>
-                    <li>Acércate</li>
-                    <li>Playa</li>
-                    <li>Ella Dice</li>
-                    <li>Duele</li>
-                    <li>Recuerdo</li>
-                    <li>Oye</li>
-                    <li>Diciembre</li>
-                    <li>Sueltate el pelo</li>
-                    <li>22</li>
-                </ol>      
-               </article>
-               <article class="album">
-                <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
-                <h2 class="texto"><a href="./detail-album.html" class="names">Heathens</a>by<a href="./detail-artist.html" class="names">Twenty One Pilots</a></h2>
-                <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
-                <p class="texto">Generos: Rap rock</p>
-                <p>Canciones del Album: </p>
-                <ol class="listadetallealbum">
                         <li>Purple Lamborghini</li>
                         <li>Sucker for Pain</li>
                         <li>Heathens</li>
@@ -158,10 +159,10 @@
                         <li>I'd Rather Go Blind</li>
                         <li>FI Started a Joke</li>
                 </ol>    
-               </article>
-
-        </ul>
+                </article>
+                </ul>
         </section>
+
     </main>
     <footer>
         <section class="footer">
