--- a/detail-album.html
+++ b/detail-album.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,22 +25,24 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
+                        <article class="perfil-menu">
                             <section class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </section>
-                             </div>
-                </section>
+                        </article>
+                        </article>
         </nav>
-        </article>
+        </section>
     </header>
     <main>
         <section class="detallealbum">
                 <h1>Justice</h1>
                 <img src="./img/justin-bieber-justice.jpeg" alt="" class="fotoj"> 
-                <p>Justice es el sexto álbum de estudio del cantante canadiense<a href="https://www.instagram.com/justinbieber/" class="names">Justin Bieber</a>. Se lanzó el 19 de marzo de 2021 a través de Def Jam Recordings.Es el primer álbum del artista en contener la etiqueta de Parental Advisory por contenido explícito. Se lanzaron previamente varios sencillos para promocionar el álbum, incluidos «Holy», «Lonely», «Anyone» y «Hold On».</p>
+                <p>Justice es el sexto álbum de estudio del cantante canadiense<a href="https://www.instagram.com/justinbieber/" class="instajustin"> Justin Bieber</a>. Se lanzó el 19 de marzo de 2021 a través de Def Jam Recordings.Es el primer álbum del artista en contener la etiqueta de Parental Advisory por contenido explícito. Se lanzaron previamente varios sencillos para promocionar el álbum, incluidos «Holy», «Lonely», «Anyone» y «Hold On».</p>
                 <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </main>
+    
     <footer>
         <section class="footer">
             <article class="seguinos">
