--- a/generos.html
+++ b/generos.html
@@ -10,10 +10,10 @@
 </head>
 <body>
         <header>
-                <article class="cajainicio">
+                <section class="cajainicio">
                     <nav class="header-items">
-                        <section class="BarraDeBusqueda">
-                                <div class="menu">
+                        <article class="BarraDeBusqueda">
+                                <article class="menu">
                                     <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="generos.html" class="barratexto">Géneros</a>
@@ -25,52 +25,54 @@
                                     <input id= "ba" type="text" name="search" placeholder = "Search">
                                     <button type="submit" class="button"> Buscar</button>
                                 </form>
-                                <div class="perfil-menu">
+                                <article class="perfil-menu">
                                     <section class="icperfil">
                                         <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                                     </section>
-                                     </div>
-                        </section>
+                                </article>
+                         </article>
                 </nav>
-                </article>
+                </section>
             </header>
 <main>          
-    <div class="acaja">
+    <section class="acaja">
             <h2 class="pag"> Géneros</h2>
-            <section class="listas">
-              <div class="caja">
+            <article class="listas">
+              <article class="caja">
                 <ul>
                         <a href="./detail-album.html" class="names">LATINO</a>
                         <a href="./detail-genres.html"><img class="fotos" src="./img/latin.jpeg" alt="FOTO GENERO LATINO"></a>
                 </ul>
-              </div>
-             <div class="caja">
+              </article>
+             <article class="caja">
                <ul>
                         <a href="./detail-album.html" class="names">POP</a>
                         <a href="./detail-genres.html"><img class="fotos" src="./img/pop.jpeg" alt="FOTO GENERO POP"></a>
                </ul>
-       </div>
-       <div class="caja">
+             </article>
+             <article class="caja">
                <ul>
                        <a href="./detail-album.html" class="names">ROCK NACIONAL</a>
                        <a href="./detail-genres.html"><img class="fotos" src="./img/nacionalr.jpg" alt="FOTO GENERO ROCK NACIONAL"></a>
                </ul>
-       </div>
-       <div class="caja">
+            </article>
+            <article class="caja">
                <ul>
                        <a href="./detail-album.html" class="names">REGGAE</a>
                        <a href="./detail-genres.html"><img class="fotos" src="./img/reggae.jpg" alt="FOTO GENERO HIPPIE"></a>
                </ul>
-       </div>
-       <div class="caja">
-        <ul>
-                <a href="./detail-album.html" class="names">HOUSE</a>
-                <a href="./detail-genres.html"><img class="fotos" src="./img/house.jpeg" alt="FOTO GENERO HOUSE"></a>
-        </ul>
-</div>
-</div>
+            </article>
+            <article class="caja">
+               <ul>
+                       <a href="./detail-album.html" class="names">HOUSE</a>
+                       <a href="./detail-genres.html"><img class="fotos" src="./img/house.jpeg" alt="FOTO GENERO HOUSE"></a>
+               </ul>
+            </article>
+        </art>
    </section>
+
 </main>
+
 <footer>
         <section class="footer">
             <article class="seguinos">
