--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header class="responsiveheader">
-        <article class="cajainicio">
+        <section class="cajainicio">
             <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                           
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
@@ -26,15 +26,15 @@
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
-                        <div class="perfil-menu">
-                            <section class="icperfil">
+                        <article class="perfil-menu">
+                            <article class="icperfil">
                                 <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                          
-                            </section>
-                             </div>
-                </section>
+                            </article>
+                        </article>
+                </article>
         </nav>
-        </article>
+        </section>
     </header>
     <main>
         <section class="container">
