--- a/albumes.html
+++ b/albumes.html
@@ -37,7 +37,7 @@
     <main>
             <section class="acaja">
                 <h2 class="pag">Álbumes</h2>
-                
+                <img src="./img/hmj.png" alt="">
                 <ul class="listas">
                     <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
@@ -172,6 +172,8 @@
             </article>
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
