--- a/artistas.html
+++ b/artistas.html
@@ -40,7 +40,7 @@
                 <h2 class="pag">Artistas</h2>
 
                 <ul class="listas">
-    
+    <img src="./img/hmj1.png" alt="">
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Justin Bieber</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
@@ -99,7 +99,7 @@
                             <li>Lights Up</li>
                             <li>Sign of the Times</li>
                             <li>Watermelon Sugar</li>
-                    </ul>
+                        </ul>
                     </li>
                 </ul>
 
@@ -112,6 +112,8 @@
                     </article>
                     <article class="nombre"> 
                         <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+                    </article>
+                    <article> <img src="./img/footer.png" alt="">
                     </article>
                 </section>
             </footer>
