--- a/canciones.html
+++ b/canciones.html
@@ -41,7 +41,7 @@
             <h2 class="titulos">Canciones</h2>
             
                <ul class="listas">
-               
+                <img src="./img/hmj3.png" alt="">
                 <li class="caja">
                     <a href="./detail-track.html"><img class="fotos" src="./img/peaches.jpeg" alt=""></a>
                     <a href="./detail-track.html" class="names">Peaches</a> <a href="./playlists.html"></a>
@@ -87,6 +87,8 @@
             </article>
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
