--- a/detail-artist.html
+++ b/detail-artist.html
@@ -63,6 +63,8 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
+            <article> <img src="./img/footer.png" alt="">
+            </article>
         </section>
     </footer>
 </body>
