--- a/detail-genres.html
+++ b/detail-genres.html
@@ -44,17 +44,17 @@
             </section>
 
             </main> 
-           
-     <footer>
-        <article class="footer">
-            <article class="seguinos">
-                    <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
-            </article>
-            <article class="nombre"> 
-                    <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
-            </article>
-        </article>
-    </footer>
-    
-    </body>
-    </html>
+ <footer>
+                <section class="footer">
+                    <article class="seguinos">
+                        <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+                    </article>
+                    <article class="nombre"> 
+                        <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+                    </article>
+                    <article> <img src="./img/footer.png" alt="">
+                    </article>
+                </section>
+ </footer>
+</body>
+</html>
