--- a/detail-track.html
+++ b/detail-track.html
@@ -54,7 +54,6 @@
         
       </section>
     </main>
-    
     <footer>
         <section class="footer">
             <article class="seguinos">
@@ -62,6 +61,8 @@
             </article>
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
