--- a/generos.html
+++ b/generos.html
@@ -38,6 +38,7 @@
     <section class="acaja">
             <h2 class="pag"> Géneros</h2>
             <article class="listas">
+                <img src="./img/hmj2.png" alt="">
               <article class="caja">
                 <ul>
                         <a href="./detail-album.html" class="names">LATINO</a>
@@ -72,16 +73,17 @@
    </section>
 
 </main>
-
 <footer>
-        <section class="footer">
-            <article class="seguinos">
-                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
-            </article>
-            <article class="nombre"> 
-                <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
-            </article>
-        </section>
-    </footer>
+    <section class="footer">
+        <article class="seguinos">
+            <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+        </article>
+        <article class="nombre"> 
+            <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+        </article>
+        <article> <img src="./img/footer.png" alt="">
+        </article>
+    </section>
+</footer>
         </body>
         </html>
