--- a/index.html
+++ b/index.html
@@ -15,25 +15,22 @@
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
-                          
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                <a href="generos.html" class="barratexto">Géneros</a>
-                                <a href="artistas.html" class="barratexto">Artistas</a>
-                                <a href="albumes.html" class="barratexto">Álbumes</a>
-                                <a href="canciones.html" class="barratexto">Canciones</a>
-                                <a href="playlists.html" class="barratexto">Playlists</a>
-                        <form action="search-results.html" method="GET" class="buscar">
-                            <input id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button"> Buscar</button>
-                        </form>
-                        <article class="perfil-menu">
-                            <article class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                         
-                            </article>
+                            <a href="generos.html" class="barratexto">Géneros</a>
+                            <a href="artistas.html" class="barratexto">Artistas</a>
+                            <a href="albumes.html" class="barratexto">Álbumes</a>
+                            <a href="canciones.html" class="barratexto">Canciones</a>
+                            <a href="playlists.html" class="barratexto">Playlists</a>
+                               <form action="search-results.html" method="GET" class="buscar">
+                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <button type="submit" class="button">Buscar</button>
+                              </form>
+                        <article class="icperfil">
+                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                        </article>
                         </article>
                 </article>
-        </nav>
+            </nav>
         </section>
     </header>
     <main>
@@ -148,6 +145,8 @@
             </article>
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
