--- a/perfil.html
+++ b/perfil.html
@@ -59,7 +59,6 @@
             </form> 
            <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
-    
     <footer>
         <section class="footer">
             <article class="seguinos">
@@ -67,6 +66,8 @@
             </article>
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
