--- a/search-results.html
+++ b/search-results.html
@@ -47,7 +47,6 @@
             </ul>
         </section>
     </main>
-    
     <footer>
         <section class="footer">
             <article class="seguinos">
@@ -55,6 +54,8 @@
             </article>
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
