--- a/albumes.html
+++ b/albumes.html
@@ -45,7 +45,7 @@
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
                         <p class="texto">Generos: Pop, R&B y hip hop</p>
                         <p>Canciones del Album: </p>
-                        <ol class="listadetallealbum">
+                        <ul class="listadetallealbum">
                                 <li>One</li>
                                 <li>I'm a Mess</li>
                                 <li>Sing</li>
@@ -62,7 +62,7 @@
                                 <li>Shirtsleeves</li>
                                 <li>Even My Dad Does Sometimes</li>
                                 <li>I See Fire</li>
-                        </ol>      
+                        </ul>      
                         </article>
                     <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
@@ -70,7 +70,7 @@
                         <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
                         <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
                         <p>Canciones del Album: </p>
-                        <ol class="listadetallealbum">
+                        <ul class="listadetallealbum">
                                 <li>I Don't Know Why</li>
                                 <li>Whatever It Takes</li>
                                 <li>Believer</li>
@@ -82,7 +82,7 @@
                                 <li>Thunder</li>
                                 <li>Start Over</li>
                                 <li>Dancing in the Dark</li>
-                        </ol>   
+                        </ul>   
                     </article>
 
                 <article class="album">
@@ -91,7 +91,7 @@
                     <p class="texto"> Lanzamiento: 19 de marzo, 2021</p>
                     <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
                     <p>Canciones del Album: </p>
-                     <ol class="listadetallealbum">
+                     <ul class="listadetallealbum">
                             <li>Much</li>
                             <li>Deserve You</li>
                             <li>As I Am</li>
@@ -108,7 +108,7 @@
                             <li>Loved By You</li>
                             <li>Anyone</li>
                             <li>Loneley</li>
-                    </ol>      
+                    </ul>      
                 </article>
 
                 <article class="album">
@@ -117,7 +117,7 @@
                     <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
                     <p class="texto">Generos: Pop, reguetón, balada, trap</p>
                     <p>Canciones del Album: </p>
-                     <ol class="listadetallealbum">
+                     <ul class="listadetallealbum">
                         <li>Un beso en Madrid</li>
                         <li>Fresa</li>
                         <li>Si tú supieras</li>
@@ -132,16 +132,17 @@
                         <li>Diciembre</li>
                         <li>Sueltate el pelo</li>
                         <li>22</li>
-                    </ol>      
+                    </ul>      
                 </article>
 
                <article class="album">
                     <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
                     <h2 class="texto"><a href="./detail-album.html" class="names">Heathens</a>by<a href="./detail-artist.html" class="names">Twenty One Pilots</a></h2>
                     <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
-                    <p class="texto">Generos: Rap rock</p>
+                    <p class="texto"> Generos: Rap rock</p>
                     <p>Canciones del Album: </p>
-                    <ol class="listadetallealbum">
+                    <a href="./canciones.html">Canciones</a>del <a href="albumes.html">Album</a>
+                    <ul class="listadetallealbum">
                         <li>Purple Lamborghini</li>
                         <li>Sucker for Pain</li>
                         <li>Heathens</li>
@@ -159,7 +160,7 @@
                         <li>Spirit In The Sky</li>
                         <li>I'd Rather Go Blind</li>
                         <li>FI Started a Joke</li>
-                </ol>    
+                </ul>    
                 </article>
                 </ul>
         </section>
