--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
     <main>
         <section class="container">
+            <img src="./img/intro.png" alt="">
 
             <h2 class="titulos">Canciones</h2>
             
