--- a/artistas.html
+++ b/artistas.html
@@ -40,7 +40,7 @@
                 <h2 class="pag">Artistas</h2>
 
                 <ul class="listas">
-    <img src="./img/hmj1.png" alt="">
+    <img class="albumpic" src="./img/hmj1.png" alt="">
                     <li class="caja">
                         <a href="./detail-artist.html" class="names">Justin Bieber</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
@@ -105,7 +105,7 @@
 
         </section>
             </main>
-            <footer>
+            <footer class="responsivefooter">
                 <section class="footer">
                     <article class="seguinos">
                         <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -113,7 +113,7 @@
                     <article class="nombre"> 
                         <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
                     </article>
-                    <article> <img src="./img/footer.png" alt="">
+                    <article> <img class="footerpic" src="./img/footer.png" alt="">
                     </article>
                 </section>
             </footer>
