--- a/detail-genres.html
+++ b/detail-genres.html
@@ -8,7 +8,7 @@
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
     <title>Detalles del Género</title>
 </head>
-<body>
+<body class="detallesg">
     <header>
         <section class="cajainicio">
             <nav class="header-items">
@@ -43,8 +43,8 @@
                         <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/GhfotMfHH3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </section>
 
-            </main> 
- <footer>
+        </main> 
+            <footer class="responsivefooter">
                 <section class="footer">
                     <article class="seguinos">
                         <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -52,9 +52,9 @@
                     <article class="nombre"> 
                         <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
                     </article>
-                    <article> <img src="./img/footer.png" alt="">
+                    <article> <img class="footerpic" src="./img/footer.png" alt="">
                     </article>
                 </section>
- </footer>
+            </footer>
 </body>
 </html>
