--- a/generos.html
+++ b/generos.html
@@ -38,7 +38,7 @@
     <section class="acaja">
             <h2 class="pag"> Géneros</h2>
             <article class="listas">
-                <img src="./img/hmj2.png" alt="">
+                <img class="albumpic" src="./img/hmj2.png" alt="">
               <article class="caja">
                 <ul>
                         <a href="./detail-album.html" class="names">LATINO</a>
@@ -73,7 +73,7 @@
    </section>
 
 </main>
-<footer>
+<footer class="responsivefooter">
     <section class="footer">
         <article class="seguinos">
             <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -81,7 +81,7 @@
         <article class="nombre"> 
             <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
         </article>
-        <article> <img src="./img/footer.png" alt="">
+        <article> <img class="footerpic" src="./img/footer.png" alt="">
         </article>
     </section>
 </footer>
