--- a/albumes.html
+++ b/albumes.html
@@ -37,7 +37,7 @@
     <main>
             <section class="acaja">
                 <h2 class="pag">Álbumes</h2>
-                <img src="./img/hmj.png" alt="">
+                <img class="albumpic" src="./img/hmj.png" alt="">
                 <ul class="listas">
                     <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
@@ -166,7 +166,7 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -174,7 +174,7 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
