--- a/canciones.html
+++ b/canciones.html
@@ -41,7 +41,7 @@
             <h2 class="titulos">Canciones</h2>
             
                <ul class="listas">
-                <img src="./img/hmj3.png" alt="">
+                <img class="albumpic" src="./img/hmj3.png" alt="">
                 <li class="caja">
                     <a href="./detail-track.html"><img class="fotos" src="./img/peaches.jpeg" alt=""></a>
                     <a href="./detail-track.html" class="names">Peaches</a> <a href="./playlists.html"></a>
@@ -80,7 +80,7 @@
             </ul> 
             </section>
     </main>
-    <footer>
+    <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -88,7 +88,7 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
