--- a/detail-album.html
+++ b/detail-album.html
@@ -42,7 +42,7 @@
                 <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
-    <footer>
+    <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -50,7 +50,7 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
