--- a/detail-track.html
+++ b/detail-track.html
@@ -54,7 +54,7 @@
         
       </section>
     </main>
-    <footer>
+    <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -62,7 +62,7 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
