--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
-                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
+                            
                             <a href="generos.html" class="barratexto">Géneros</a>
                             <a href="artistas.html" class="barratexto">Artistas</a>
                             <a href="albumes.html" class="barratexto">Álbumes</a>
@@ -35,7 +35,7 @@
     </header>
     <main>
         <section class="container">
-            <img src="./img/intro.png" alt="">
+            <img class="introhome" src="./img/intro.png" alt="">
 
             <h2 class="titulos">Canciones</h2>
             
@@ -145,9 +145,9 @@
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
             </article>
             <article class="nombre"> 
-                <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+                <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
