--- a/perfil.html
+++ b/perfil.html
@@ -59,7 +59,7 @@
             </form> 
            <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
-    <footer>
+    <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -67,7 +67,7 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
