--- a/playlists.html
+++ b/playlists.html
@@ -37,7 +37,7 @@
     </header>
     <section class="playlist">
         <h1 class="titulos">Mi Playlist</a></h1>
-        <main>
+        <main class="iniciasesionforms" >
             <article class="containerpl">
                 <article class="cajapl">
                     <article class="fotopl">
@@ -122,7 +122,7 @@
             </article> 
         </section>
 </main>
-<footer>
+<footer class="responsivefooter">
     <section class="footer">
         <article class="seguinos">
             <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -130,7 +130,7 @@
         <article class="nombre"> 
             <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
         </article>
-        <article> <img src="./img/footer.png" alt="">
+        <article> <img class="footerpic" src="./img/footer.png" alt="">
         </article>
     </section>
 </footer>
