--- a/search-results.html
+++ b/search-results.html
@@ -47,7 +47,7 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
@@ -55,7 +55,7 @@
             <article class="nombre"> 
                 <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
-            <article> <img src="./img/footer.png" alt="">
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
             </article>
         </section>
     </footer>
